--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 <body>
 <h1>Intermediate Algorithm Scripting</h1>
 <p>Output is done via console.log in the developer console (try hitting F12)</p>
+<p>Please feel free to test the functions on your own by calling them in the console!</p>
 <dl>
 	<dt>sumAll([a, b])</dt>
 	<dd>Take array of two numbers. Return sum of those two numbers and all numbers between them.</dd>
 	<dt>diffArray(arr1, arr2)</dt>
 	<dd>Take two arrays, return the symmetric difference of the two arrays. In other words, return an array of items that appear in one of the
 arrays but not both</dd>
+	<dt>convertToRoman(num)</dt>
+	<dd>Take a number, return its Roman Numeral</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
