--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 	<dd>Take array of two numbers. Return sum of those two numbers and all numbers between them.</dd>
 	<dt>diffArray(arr1, arr2)</dt>
 	<dd>Take two arrays, return the symmetric difference of the two arrays. In other words, return an array of items that appear in one of the
-arrays but not both</dd>
+arrays but not both.</dd>
 	<dt>convertToRoman(num)</dt>
-	<dd>Take a number, return its Roman Numeral</dd>
+	<dd>Take a number, return its Roman Numeral.</dd>
+	<dt>whatIsInAName(collection, source)</dt>
+	<dd>Look through an array of objects (collection), returns an array of all objects that have matching property value pairs (source).</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
