--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ arrays but not both.</dd>
 	<dd>Take a number, return its Roman Numeral.</dd>
 	<dt>whatIsInAName(collection, source)</dt>
 	<dd>Look through an array of objects (collection), returns an array of all objects that have matching property value pairs (source).</dd>
+	<dt>myReplace(str, before, after)</dt>
+	<dd>Perform a search and replace on the sentence using the arguments provided and return the new sentence.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
