--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ arrays but not both.</dd>
 	<dd>Look through an array of objects (collection), returns an array of all objects that have matching property value pairs (source).</dd>
 	<dt>myReplace(str, before, after)</dt>
 	<dd>Perform a search and replace on the sentence using the arguments provided and return the new sentence.</dd>
+	<dt>translatePigLatin(str)</dt>
+	<dd>Takes the first consonant (or consonant cluster) of an English word, moves it to the end of the word and suffixes an "ay". If a word begins with a vowel you just add "way" to the end.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
