--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ arrays but not both.</dd>
 	<dd>Perform a search and replace on the sentence using the arguments provided and return the new sentence.</dd>
 	<dt>translatePigLatin(str)</dt>
 	<dd>Takes the first consonant (or consonant cluster) of an English word, moves it to the end of the word and suffixes an "ay". If a word begins with a vowel you just add "way" to the end.</dd>
+	<dt>pairElement(str)</dt>
+	<dd>The DNA strand is missing the pairing element. Take each character, get its pair, and return the results as a 2d array. Base pairs are a pair of AT and CG. </dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
