--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ arrays but not both.</dd>
 	<dd>Takes the first consonant (or consonant cluster) of an English word, moves it to the end of the word and suffixes an "ay". If a word begins with a vowel you just add "way" to the end.</dd>
 	<dt>pairElement(str)</dt>
 	<dd>The DNA strand is missing the pairing element. Take each character, get its pair, and return the results as a 2d array. Base pairs are a pair of AT and CG. </dd>
+	<dt>fearNotLetter(str)</dt>
+	<dd>Find the missing letter in the passed letter range and return it. If all letters are present in the range, return undefined.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
