--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ arrays but not both.</dd>
 	<dd>The DNA strand is missing the pairing element. Take each character, get its pair, and return the results as a 2d array. Base pairs are a pair of AT and CG. </dd>
 	<dt>fearNotLetter(str)</dt>
 	<dd>Find the missing letter in the passed letter range and return it. If all letters are present in the range, return undefined.</dd>
+	<dt>booWho(bool)</dt>
+	<dd>Check if a value is classified as a boolean primitive. Return true or false.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
