--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ arrays but not both.</dd>
 	<dd>Find the missing letter in the passed letter range and return it. If all letters are present in the range, return undefined.</dd>
 	<dt>booWho(bool)</dt>
 	<dd>Check if a value is classified as a boolean primitive. Return true or false.</dd>
+	<dt>uniteUnique(arr)</dt>
+	<dd>Write a function that takes two or more arrays and returns a new array of unique values in the order of the original provided arrays. In other words, all values present from all arrays should be included in their original order, but with no duplicates in the final array.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
