--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ arrays but not both.</dd>
 	<dd>Check if a value is classified as a boolean primitive. Return true or false.</dd>
 	<dt>uniteUnique(arr)</dt>
 	<dd>Write a function that takes two or more arrays and returns a new array of unique values in the order of the original provided arrays. In other words, all values present from all arrays should be included in their original order, but with no duplicates in the final array.</dd>
+	<dt>convertHTML(str)</dt>
+	<dd>Convert the characters &amp;, <, >, " (double quote), and ' (apostrophe), in a string to their corresponding HTML entities.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
