--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ arrays but not both.</dd>
 	<dd>Write a function that takes two or more arrays and returns a new array of unique values in the order of the original provided arrays. In other words, all values present from all arrays should be included in their original order, but with no duplicates in the final array.</dd>
 	<dt>convertHTML(str)</dt>
 	<dd>Convert the characters &amp;, <, >, " (double quote), and ' (apostrophe), in a string to their corresponding HTML entities.</dd>
+	<dt>spinalCase(str)</dt>
+	<dd>Convert a string to spinal case. Spinal case is all-lowercase-words-joined-by-dashes.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
