--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ arrays but not both.</dd>
 	<dd>Convert the characters &amp;, <, >, " (double quote), and ' (apostrophe), in a string to their corresponding HTML entities.</dd>
 	<dt>spinalCase(str)</dt>
 	<dd>Convert a string to spinal case. Spinal case is all-lowercase-words-joined-by-dashes.</dd>
+	<dt>sumFibs(num)</dt>
+	<dd>Given a positive integer num, return the sum of all odd Fibonacci numbers that are less than or equal to num.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
