--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ arrays but not both.</dd>
 	<dd>Convert a string to spinal case. Spinal case is all-lowercase-words-joined-by-dashes.</dd>
 	<dt>sumFibs(num)</dt>
 	<dd>Given a positive integer num, return the sum of all odd Fibonacci numbers that are less than or equal to num.</dd>
+	<dt>sumPrimes(num)</dt>
+	<dd>Sum all the prime numbers up to and including the provided number.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
