--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ arrays but not both.</dd>
 	<dd>Given a positive integer num, return the sum of all odd Fibonacci numbers that are less than or equal to num.</dd>
 	<dt>sumPrimes(num)</dt>
 	<dd>Sum all the prime numbers up to and including the provided number.</dd>
+	<dt>smallestCommons(arr)</dt>
+	<dd>Find the smallest common multiple of the provided parameters that can be evenly divided by both, as well as by all sequential numbers in the range between these parameters.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
