--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ arrays but not both.</dd>
 	<dd>Sum all the prime numbers up to and including the provided number.</dd>
 	<dt>smallestCommons(arr)</dt>
 	<dd>Find the smallest common multiple of the provided parameters that can be evenly divided by both, as well as by all sequential numbers in the range between these parameters.</dd>
+	<dt>findElement(arr, func)</dt>
+	<dd>Create a function that looks through an array (first argument) and returns the first element in the array that passes a truth test (second argument).</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
