--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ arrays but not both.</dd>
 	<dd>Create a function that looks through an array (first argument) and returns the first element in the array that passes a truth test (second argument).</dd>
 	<dt>dropElements(arr, func)</dt>
 	<dd>Drop the elements of an array (first argument), starting from the front, until the predicate (second argument) returns true.</dd>
+	<dt>steamrollArray(arr)</dt>
+	<dd>Flatten a nested array. You must account for varying levels of nesting.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
