--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ arrays but not both.</dd>
 	<dd>Drop the elements of an array (first argument), starting from the front, until the predicate (second argument) returns true.</dd>
 	<dt>steamrollArray(arr)</dt>
 	<dd>Flatten a nested array. You must account for varying levels of nesting.</dd>
+	<dt>binaryAgent(str)</dt>
+	<dd>Return an English translated sentence of the passed binary string. The binary string will be space separated.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
