--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ arrays but not both.</dd>
 	<dd>Flatten a nested array. You must account for varying levels of nesting.</dd>
 	<dt>binaryAgent(str)</dt>
 	<dd>Return an English translated sentence of the passed binary string. The binary string will be space separated.</dd>
+	<dt>truthCheck(collection, pre)</dt>
+	<dd>Check if the predicate (second argument) is truthy on all elements of a collection (first argument).</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
