--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ arrays but not both.</dd>
 	<dd>Return an English translated sentence of the passed binary string. The binary string will be space separated.</dd>
 	<dt>truthCheck(collection, pre)</dt>
 	<dd>Check if the predicate (second argument) is truthy on all elements of a collection (first argument).</dd>
+	<dt>function addTogether()</dt>
+	<dd>Create a function that sums two arguments together. If only one argument is provided, then return a function that expects one argument and returns the sum.</dd>
 </dl>
 
 <script type="text/javascript" src="script.js"></script>
